[tool.poetry]
name = "profiler"
version = "0.1.0"
description = "Simple Service for receiving time breakpoints and analizyng elapsed time"
authors = ["Oleh Mazur <oleh@four-velocity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
